# socom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  pyproject.toml
.github/workflows/: check-version.yml  deployment.yml  provisional.yml  publish.yml  testing.yml
socom/: __init__.py  net.py
src/: main.cxx  py_multinet.hxx
tests/: ttn_test.py
