[tool.poetry]
name = "socom"
version = "0.1.1a0"
description = "Data analysis tool for studying social communication"
homepage = "https://github.com/uuinfolab/socom"
repository = "https://github.com/uuinfolab/socom"
authors = ["Davide Vega <davide.vega@it.uu.se>"]
license = "LICENSE"
readme = "README.md"

packages = [
    { include = "socom" },
]

include = ["CMakeLists.txt", "src", "ext"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.10"
pybind11 = ">=2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-sugar = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core", "setuptools", "setuptools-cpp"]
build-backend = "poetry.core.masonry.api"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*"]

skip = ["*-win32", "*-manylinux_i686"]
